Mise en place des actions dans le tableau

--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -1,8 +1,6 @@
 
-.icon-undo:before { content: '\e800'; } /* '' */
-.icon-left-thin:before { content: '\e801'; } /* '' */
-.icon-left-outline:before { content: '\e802'; } /* '' */
-.icon-left:before { content: '\e803'; } /* '' */
-.icon-mail:before { content: '\e804'; } /* '' */
-.icon-home:before { content: '\e805'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-edit:before { content: '\e800'; } /* '' */
+.icon-list-add:before { content: '\e801'; } /* '' */
+.icon-trash-empty:before { content: '\e802'; } /* '' */
+.icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
