--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?67686140');
-  src: url('../font/fontello.eot?67686140#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?67686140') format('woff2'),
-       url('../font/fontello.woff?67686140') format('woff'),
-       url('../font/fontello.ttf?67686140') format('truetype'),
-       url('../font/fontello.svg?67686140#fontello') format('svg');
+  src: url('../font/fontello.eot?55743370');
+  src: url('../font/fontello.eot?55743370#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?55743370') format('woff2'),
+       url('../font/fontello.woff?55743370') format('woff'),
+       url('../font/fontello.ttf?55743370') format('truetype'),
+       url('../font/fontello.svg?55743370#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?67686140#fontello') format('svg');
+    src: url('../font/fontello.svg?55743370#fontello') format('svg');
   }
 }
 */
@@ -55,10 +55,8 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-undo:before { content: '\e800'; } /* '' */
-.icon-left-thin:before { content: '\e801'; } /* '' */
-.icon-left-outline:before { content: '\e802'; } /* '' */
-.icon-left:before { content: '\e803'; } /* '' */
-.icon-mail:before { content: '\e804'; } /* '' */
-.icon-home:before { content: '\e805'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-edit:before { content: '\e800'; } /* '' */
+.icon-list-add:before { content: '\e801'; } /* '' */
+.icon-trash-empty:before { content: '\e802'; } /* '' */
+.icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
