--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?55743370');
-  src: url('../font/fontello.eot?55743370#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?55743370') format('woff2'),
-       url('../font/fontello.woff?55743370') format('woff'),
-       url('../font/fontello.ttf?55743370') format('truetype'),
-       url('../font/fontello.svg?55743370#fontello') format('svg');
+  src: url('../font/fontello.eot?21023425');
+  src: url('../font/fontello.eot?21023425#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?21023425') format('woff2'),
+       url('../font/fontello.woff?21023425') format('woff'),
+       url('../font/fontello.ttf?21023425') format('truetype'),
+       url('../font/fontello.svg?21023425#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?55743370#fontello') format('svg');
+    src: url('../font/fontello.svg?21023425#fontello') format('svg');
   }
 }
 */
@@ -58,5 +58,7 @@
 .icon-edit:before { content: '\e800'; } /* '' */
 .icon-list-add:before { content: '\e801'; } /* '' */
 .icon-trash-empty:before { content: '\e802'; } /* '' */
+.icon-plus:before { content: '\e803'; } /* '' */
+.icon-mail:before { content: '\e804'; } /* '' */
 .icon-list-bullet:before { content: '\f0ca'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
