Modification des options de la MailingList

--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -1,8 +1,12 @@
 
-.icon-edit:before { content: '\e800'; } /* '' */
-.icon-list-add:before { content: '\e801'; } /* '' */
-.icon-trash-empty:before { content: '\e802'; } /* '' */
-.icon-plus:before { content: '\e803'; } /* '' */
-.icon-mail:before { content: '\e804'; } /* '' */
+.icon-check:before { content: '\e800'; } /* '' */
+.icon-pencil:before { content: '\e801'; } /* '' */
+.icon-list-add:before { content: '\e802'; } /* '' */
+.icon-user-add:before { content: '\e803'; } /* '' */
+.icon-user-add-outline:before { content: '\e804'; } /* '' */
+.icon-user-add-1:before { content: '\e805'; } /* '' */
+.icon-trash-empty:before { content: '\e806'; } /* '' */
+.icon-mail:before { content: '\e807'; } /* '' */
 .icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
