--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?98057357');
-  src: url('../font/fontello.eot?98057357#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?98057357') format('woff2'),
-       url('../font/fontello.woff?98057357') format('woff'),
-       url('../font/fontello.ttf?98057357') format('truetype'),
-       url('../font/fontello.svg?98057357#fontello') format('svg');
+  src: url('../font/fontello.eot?69084195');
+  src: url('../font/fontello.eot?69084195#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?69084195') format('woff2'),
+       url('../font/fontello.woff?69084195') format('woff'),
+       url('../font/fontello.ttf?69084195') format('truetype'),
+       url('../font/fontello.svg?69084195#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?98057357#fontello') format('svg');
+    src: url('../font/fontello.svg?69084195#fontello') format('svg');
   }
 }
 */
@@ -63,6 +63,8 @@
 .icon-user-add-1:before { content: '\e805'; } /* '' */
 .icon-trash-empty:before { content: '\e806'; } /* '' */
 .icon-mail:before { content: '\e807'; } /* '' */
+.icon-plus:before { content: '\e808'; } /* '' */
+.icon-left-outline:before { content: '\e809'; } /* '' */
 .icon-list-bullet:before { content: '\f0ca'; } /* '' */
 .icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
