--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -9,6 +9,8 @@
 .icon-mail:before { content: '\e807'; } /* '' */
 .icon-plus:before { content: '\e808'; } /* '' */
 .icon-left-outline:before { content: '\e809'; } /* '' */
+.icon-info-circled:before { content: '\e80a'; } /* '' */
 .icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-info:before { content: '\f129'; } /* '' */
 .icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
