--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?69084195');
-  src: url('../font/fontello.eot?69084195#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?69084195') format('woff2'),
-       url('../font/fontello.woff?69084195') format('woff'),
-       url('../font/fontello.ttf?69084195') format('truetype'),
-       url('../font/fontello.svg?69084195#fontello') format('svg');
+  src: url('../font/fontello.eot?88077155');
+  src: url('../font/fontello.eot?88077155#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?88077155') format('woff2'),
+       url('../font/fontello.woff?88077155') format('woff'),
+       url('../font/fontello.ttf?88077155') format('truetype'),
+       url('../font/fontello.svg?88077155#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?69084195#fontello') format('svg');
+    src: url('../font/fontello.svg?88077155#fontello') format('svg');
   }
 }
 */
@@ -65,6 +65,8 @@
 .icon-mail:before { content: '\e807'; } /* '' */
 .icon-plus:before { content: '\e808'; } /* '' */
 .icon-left-outline:before { content: '\e809'; } /* '' */
+.icon-info-circled:before { content: '\e80a'; } /* '' */
 .icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-info:before { content: '\f129'; } /* '' */
 .icon-trash:before { content: '\f1f8'; } /* '' */
 .icon-user-plus:before { content: '\f234'; } /* '' */
